crates/ladder_types/tests/ui/generated/should_fail/test__unary_wrapper_ladder__R0_plus_R2.stderr
error[E0308]: mismatched types
 --> tests/ui/generated/should_fail/test__unary_wrapper_ladder__R0_plus_R2.rs:5:24
  |
5 |    let _ = R0::new() + R2::new();
  |                        ^^^^^^^^^ expected `RelativeTo<RelativeTo<()>>`, found `RelativeTo<RelativeTo<...>>`
  |
  = note: expected struct `RelativeTo<RelativeTo<()>>`
             found struct `RelativeTo<RelativeTo<RelativeTo<()>>>`
